solutions/remotemonitoring/scripts/individual/asa-manager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: asa-manager
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: asa-manager
    spec:
      containers:
      - name: asa-manager-pod
        image: azureiotpcs/asa-manager-dotnet:{dockerTag}
        ports:
        - containerPort: 9024
---
apiVersion: v1
kind: Service
metadata:
  name: asa-manager-svc
  labels:
    app: asa-manager
spec:
  type: NodePort
  ports:
  - port: 9024
  selector:
    app: asa-manager
