solutions/remotemonitoring/scripts/individual/diagnostics.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: diagnostics
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: diagnostics
    spec:
      containers:
      - name: diagnostics-pod
        image: azureiotpcs/pcs-diagnostics-dotnet:Diagnostics-2.0.0
        ports:
        - containerPort: 9006
---
apiVersion: v1
kind: Service
metadata:
  name: diagnostics-svc
  labels:
    app: diagnostics
spec:
  type: NodePort
  ports:
  - port: 9006
  selector:
    app: diagnostics
