solutions/remotemonitoring/scripts/individual/stream-analytics.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: telemetry-agent
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: telemetry-agent
    spec:
      containers:
      - name: telemetry-agent-pod
        image: azureiotpcs/telemetry-agent-{runtime}:1.0.0-preview.5
        ports:
        - containerPort: 9023
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-agent-svc
  labels:
    app: telemetry-agent
spec:
  type: NodePort
  ports:
  - port: 9023
  selector:
    app: telemetry-agent
