solutions/remotemonitoring/scripts/individual/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: remotemonitoring
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "{DNS}"
    secretName: tls-certificate
  rules:
  - host: "{DNS}"
    http:
      paths:
      - path: /
        backend:
          serviceName: remote-monitoring-webui-svc
          servicePort: 9000
      - path: /auth
        backend:
          serviceName: auth-svc
          servicePort: 9001
      - path: /iothubmanager
        backend:
          serviceName: iothub-manager-svc
          servicePort: 9002
      - path: /devicesimulation
        backend:
          serviceName: device-simulation-svc
          servicePort: 9003
      - path: /telemetry
        backend:
          serviceName: telemetry-svc
          servicePort: 9004
      - path: /config
        backend:
          serviceName: config-svc
          servicePort: 9005
